prometheus-stack/templates/node-exporter/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: node-exporter
  labels:
    app: node-exporter
spec:
  podSelector:
    matchLabels:
      app: node-exporter
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 9100
